[test] fix expectation dependencies, only the required ones are rebuilt now

--- a/dune/gdt/test/linearelliptic/swipdg-estimator-expectations/CMakeLists.txt
+++ b/dune/gdt/test/linearelliptic/swipdg-estimator-expectations/CMakeLists.txt
@@ -9,10 +9,10 @@
 #   Rene Milk       (2016)
 
 # expectation targets
-dune_add_library(swipdg_expectations
+dune_add_library(swipdg_estimator_expectations
                 NO_EXPORT
-                SOURCES ao2013-2dalugrid.cxx
-                        esv2007-2dalugrid.cxx
-                        spe10-2dalugrid.cxx
-            )
+                SOURCES
+                ao2013-2dalugrid.cxx
+                esv2007-2dalugrid.cxx
+                spe10-2dalugrid.cxx)
 
