--- a/dune/gdt/test/CMakeLists.txt
+++ b/dune/gdt/test/CMakeLists.txt
@@ -47,13 +47,17 @@ add_subdirectory(hyperbolic)
 
 
 foreach(test_target ${dxt_test_binaries})
-    if(${test_target} MATCHES linearelliptic__)
+    if(${test_target} MATCHES linearelliptic__cg_discretization)
         target_link_libraries(${test_target} cg_expectations)
-    endif(${test_target} MATCHES linearelliptic__)
-    if(${test_target} MATCHES linearelliptic__)
+    endif()
+    if(${test_target} MATCHES linearelliptic__swipdg_discretization)
         target_link_libraries(${test_target} swipdg_expectations)
-    endif(${test_target} MATCHES linearelliptic__)
+    endif()
+    if(${test_target} MATCHES test_linearelliptic__swipdg_estimators)
+        target_link_libraries(${test_target} swipdg_expectations)
+        target_link_libraries(${test_target} swipdg_estimator_expectations)
+    endif()
     if(${test_target} MATCHES hyperbolic__fv_discretization)
         target_link_libraries(${test_target} expectations_hyperbolic_fv_discretizations_yaspgrid)
-    endif(${test_target} MATCHES hyperbolic__fv_discretization)
-endforeach(test_target ${dxt_test_binaries})
+    endif()
+endforeach()
