[bindings|operators.OS2015] add ResidualProduct, DiffusiveFluxProduct

--- a/dune/gdt/CMakeLists.txt
+++ b/dune/gdt/CMakeLists.txt
@@ -80,6 +80,9 @@ if(dune-pybindxi_FOUND)
   # * the operators from ESV2007
   dune_pybindxi_add_module(__operators_ESV2007 playground/operators/ESV2007.bindings.cc)
   list(APPEND pybindxi_modules __operators_ESV2007)
+  # * the operators from OS2015
+  dune_pybindxi_add_module(__operators_OS2015 playground/operators/OS2015.bindings.cc)
+  list(APPEND pybindxi_modules __operators_OS2015)
   # the functionals
   dune_pybindxi_add_helper_lib(__functionals_elliptic_ipdg_helper
                                functionals/elliptic-ipdg.bindings/alu_fem_istl.cc
