--- a/dune/gdt/test/CMakeLists.txt
+++ b/dune/gdt/test/CMakeLists.txt
@@ -61,7 +61,7 @@ foreach(test_target ${dxt_test_binaries})
         target_link_libraries(${test_target} swipdg_estimator_expectations)
     endif()
     if(${test_target} MATCHES hyperbolic__fv_discretization)
-        target_link_libraries(${test_target} expectations_hyperbolic_fv_discretizations_yaspgrid)
+        target_link_libraries(${test_target} -L/home/tobias/Software/dune-gdt-super-2.5/local/lib qhull_r qhullcpp matrixexponential expectations_hyperbolic_fv_discretizations_yaspgrid)
     endif()
     if(${test_target} MATCHES entropytest)
 	target_link_libraries(${test_target} -L/home/tobias/Software/dune-gdt-super-2.5/local/lib qhull_r qhullcpp matrixexponential)
