--- a/dune/gdt/test/hyperbolic/CMakeLists.txt
+++ b/dune/gdt/test/hyperbolic/CMakeLists.txt
@@ -13,6 +13,7 @@
 dune_add_library(expectations_hyperbolic_fv_discretizations_yaspgrid
 	          NO_EXPORT
             SOURCES
+            eocexpectations-fv-linesource-2dyaspgrid.cxx
             eocexpectations-fv-pointsource-3dyaspgrid.cxx)
 #            eocexpectations-fv-sourcebeam-1dyaspgrid.cxx
 #            eocexpectations-fv-boltzmanncheckerboard-2dyaspgrid.cxx
