add lapack eigensolver

--- a/dune/gdt/test/CMakeLists.txt
+++ b/dune/gdt/test/CMakeLists.txt
@@ -64,6 +64,6 @@ foreach(test_target ${dxt_test_binaries})
         target_link_libraries(${test_target} -L${CMAKE_SOURCE_DIR}/../local/lib lpsolve55 qhull_r qhullcpp matrixexponential expectations_hyperbolic_fv_discretizations_yaspgrid)
     endif()
     if(${test_target} MATCHES entropytest)
-	target_link_libraries(${test_target} -L${CMAKE_SOURCE_DIR}/../local/lib lpsolve55 qhull_r qhullcpp matrixexponential)
+	target_link_libraries(${test_target} -L${CMAKE_SOURCE_DIR}/../local/lib lapack lpsolve55 qhull_r qhullcpp matrixexponential)
     endif()
 endforeach()
