[eigensolver] use LAPACKE instead of plain lapack

--- a/dune/gdt/CMakeLists.txt
+++ b/dune/gdt/CMakeLists.txt
@@ -105,5 +105,6 @@ if(dune-pybindxi_FOUND)
 endif()
 
 add_subdirectory(timestepper/matrixexponential)
+add_subdirectory(operators/fv)
 add_subdirectory(test EXCLUDE_FROM_ALL)
 
