--- a/dune/gdt/test/CMakeLists.txt
+++ b/dune/gdt/test/CMakeLists.txt
@@ -61,9 +61,9 @@ foreach(test_target ${dxt_test_binaries})
         target_link_libraries(${test_target} swipdg_estimator_expectations)
     endif()
     if(${test_target} MATCHES hyperbolic__fv_discretization)
-        target_link_libraries(${test_target} -L${CMAKE_SOURCE_DIR}/../local/lib lpsolve55 qhull_r qhullcpp matrixexponential expectations_hyperbolic_fv_discretizations_yaspgrid)
+        target_link_libraries(${test_target} -L${CMAKE_SOURCE_DIR}/../local/lib lpsolve55 qhull_r qhullcpp matrixexponential expectations_hyperbolic_fv_discretizations_yaspgrid eigensolver lapack)
     endif()
     if(${test_target} MATCHES entropytest)
-	target_link_libraries(${test_target} -L${CMAKE_SOURCE_DIR}/../local/lib lapack lpsolve55 qhull_r qhullcpp matrixexponential)
+	target_link_libraries(${test_target} -L${CMAKE_SOURCE_DIR}/../local/lib lpsolve55 qhull_r qhullcpp matrixexponential eigensolver lapack)
     endif()
 endforeach()
