--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,10 @@ before_script:
     # get image with fallback to master branch of the super repo
     - docker pull ${IMAGE} || export IMAGE="dunecommunity/${MY_MODULE}-testing_${DOCKER_TAG}:master" ; docker pull ${IMAGE}
     - export ENV_FILE=${HOME}/env
-    - printenv | \grep TRAVIS > ${ENV_FILE}
-    - printenv | \grep encrypt >> ${ENV_FILE}
-    - printenv | \grep TEST >> ${ENV_FILE}
-    - printenv | \grep TOKEN >> ${ENV_FILE}
+    - printenv | \grep TRAVIS > ${ENV_FILE} || echo This is not a failure
+    - printenv | \grep encrypt >> ${ENV_FILE} || echo This is not a failure
+    - printenv | \grep TEST >> ${ENV_FILE} || echo This is not a failure
+    - printenv | \grep TOKEN >> ${ENV_FILE} || echo This is not a failure
     - export DOCKER_RUN="docker run --env-file ${ENV_FILE} -v ${TRAVIS_BUILD_DIR}:/root/src/${MY_MODULE} ${IMAGE}"
 
 script:
