--- a/dune/gdt/test/hyperbolic/CMakeLists.txt
+++ b/dune/gdt/test/hyperbolic/CMakeLists.txt
@@ -25,3 +25,5 @@ dune_add_library(expectations_hyperbolic_fv_discretizations_yaspgrid
 #            eocexpectations-fv-shallowwater-1dyaspgrid.cxx
 #            eocexpectations-fv-shocktube-1dyaspgrid.cxx)
 target_link_libraries(expectations_hyperbolic_fv_discretizations_yaspgrid -L${CMAKE_SOURCE_DIR}/../local/lib qhull_r qhullcpp matrixexponential)
+
+add_subdirectory(problems/momentmodels)
