[test] reenable transport test

--- a/dune/gdt/test/hyperbolic/CMakeLists.txt
+++ b/dune/gdt/test/hyperbolic/CMakeLists.txt
@@ -15,15 +15,14 @@ dune_add_library(expectations_hyperbolic_fv_discretizations_yaspgrid
             SOURCES
             eocexpectations-fv-linesource-2dyaspgrid.cxx
             eocexpectations-fv-linesourcemn-2dyaspgrid.cxx
-            eocexpectations-fv-pointsource-3dyaspgrid.cxx)
+            eocexpectations-fv-pointsource-3dyaspgrid.cxx
 #            eocexpectations-fv-sourcebeam-1dyaspgrid.cxx
 #            eocexpectations-fv-boltzmanncheckerboard-2dyaspgrid.cxx
 #            eocexpectations-fv-burgers-1dyaspgrid.cxx
 #            eocexpectations-fv-burgers-2dyaspgrid.cxx
-#            eocexpectations-fv-transport-1dyaspgrid.cxx
-#            eocexpectations-fv-transport-2dyaspgrid.cxx
+            eocexpectations-fv-transport-1dyaspgrid.cxx
+            eocexpectations-fv-transport-2dyaspgrid.cxx)
 #            eocexpectations-fv-shallowwater-1dyaspgrid.cxx
 #            eocexpectations-fv-shocktube-1dyaspgrid.cxx)
-target_link_libraries(expectations_hyperbolic_fv_discretizations_yaspgrid -L${CMAKE_SOURCE_DIR}/../local/lib qhull_r qhullcpp matrixexponential)
 
 add_subdirectory(problems/momentmodels)
