[cmake] move lebedevquadrature away from test directory to avoid test creation

--- a/dune/gdt/CMakeLists.txt
+++ b/dune/gdt/CMakeLists.txt
@@ -104,6 +104,12 @@ if(dune-pybindxi_FOUND)
   endif()
 endif()
 
+dune_add_library(lebedevquadrature
+                 NO_EXPORT
+                 COMPILE_FLAGS "-O0"
+                 SOURCES
+                 lebedevquadrature.cc)
+
 add_subdirectory(timestepper/matrixexponential)
 add_subdirectory(operators/fv)
 add_subdirectory(test EXCLUDE_FROM_ALL)
