--- a/dune/gdt/test/hyperbolic/CMakeLists.txt
+++ b/dune/gdt/test/hyperbolic/CMakeLists.txt
@@ -21,7 +21,7 @@ dune_add_library(expectations_hyperbolic_fv_discretizations_yaspgrid
            eocexpectations-fv-burgers-1dyaspgrid.cxx
 	   eocexpectations-fv-burgers-2dyaspgrid.cxx
 	   eocexpectations-fv-transport-1dyaspgrid.cxx
-	   eocexpectations-fv-transport-2dyaspgrid.cxx)
+	   eocexpectations-fv-transport-2dyaspgrid.cxx
            eocexpectations-fv-shallowwater-1dyaspgrid.cxx
 	    #            eocexpectations-fv-shocktube-1dyaspgrid.cxx
 )
