Revert "[cmake] move lebedevquadrature away from test directory to avoid test creation"
This reverts commit d76280e6f99d0e339da10258d4eaa38445410be5. That file
has nothing to do in the top level dir.

--- a/dune/gdt/test/hyperbolic/CMakeLists.txt
+++ b/dune/gdt/test/hyperbolic/CMakeLists.txt
@@ -25,3 +25,5 @@ dune_add_library(expectations_hyperbolic_fv_discretizations_yaspgrid
            eocexpectations-fv-shallowwater-1dyaspgrid.cxx
 	    #            eocexpectations-fv-shocktube-1dyaspgrid.cxx
 )
+
+add_subdirectory(problems/momentmodels)
