--- a/dune/gdt/test/hyperbolic/problems/momentmodels/CMakeLists.txt
+++ b/dune/gdt/test/hyperbolic/problems/momentmodels/CMakeLists.txt
@@ -10,5 +10,37 @@
 dune_add_library(lebedevquadrature
                  NO_EXPORT
                  SOURCES
-                 lebedevquadrature.cxx)
+                 lebedevquadrature/order_101.cxx
+                 lebedevquadrature/order_107.cxx
+                 lebedevquadrature/order_113.cxx
+                 lebedevquadrature/order_119.cxx
+                 lebedevquadrature/order_11.cxx
+                 lebedevquadrature/order_125.cxx
+                 lebedevquadrature/order_131.cxx
+                 lebedevquadrature/order_13.cxx
+                 lebedevquadrature/order_15.cxx
+                 lebedevquadrature/order_17.cxx
+                 lebedevquadrature/order_19.cxx
+                 lebedevquadrature/order_21.cxx
+                 lebedevquadrature/order_23.cxx
+                 lebedevquadrature/order_25.cxx
+                 lebedevquadrature/order_27.cxx
+                 lebedevquadrature/order_29.cxx
+                 lebedevquadrature/order_31.cxx
+                 lebedevquadrature/order_35.cxx
+                 lebedevquadrature/order_3.cxx
+                 lebedevquadrature/order_41.cxx
+                 lebedevquadrature/order_47.cxx
+                 lebedevquadrature/order_53.cxx
+                 lebedevquadrature/order_59.cxx
+                 lebedevquadrature/order_5.cxx
+                 lebedevquadrature/order_65.cxx
+                 lebedevquadrature/order_71.cxx
+                 lebedevquadrature/order_77.cxx
+                 lebedevquadrature/order_7.cxx
+                 lebedevquadrature/order_83.cxx
+                 lebedevquadrature/order_89.cxx
+                 lebedevquadrature/order_95.cxx
+                 lebedevquadrature/order_9.cxx
+		 )
 
