--- a/dune/gdt/test/CMakeLists.txt
+++ b/dune/gdt/test/CMakeLists.txt
@@ -61,9 +61,9 @@ foreach(test_target ${dxt_test_binaries})
         target_link_libraries(${test_target} swipdg_estimator_expectations)
     endif()
     if(${test_target} MATCHES hyperbolic__fv_discretization)
-	    target_link_libraries(${test_target} ${LPSolve_LIBRARIES} ${Qhull_LIBRARIES} ${LAPACKE_LIBRARIES} ${MATEXP_LIBRARIES} eigensolver lebedevquadrature expectations_hyperbolic_fv_discretizations_yaspgrid eigensolver)
+	    target_link_libraries(${test_target} ${LPSolve_LIBRARIES} ${Qhull_LIBRARIES} ${LAPACKE_LIBRARIES} ${MATEXP_LIBRARIES} eigensolver ${LEBEDEV_DATA_LIBRARIES} expectations_hyperbolic_fv_discretizations_yaspgrid eigensolver)
     endif()
     if(${test_target} MATCHES entropytest)
-	    target_link_libraries(${test_target} ${LPSolve_LIBRARIES} ${Qhull_LIBRARIES} ${LAPACKE_LIBRARIES} ${MATEXP_LIBRARIES} eigensolver lebedevquadrature)
+	    target_link_libraries(${test_target} ${LPSolve_LIBRARIES} ${Qhull_LIBRARIES} ${LAPACKE_LIBRARIES} ${MATEXP_LIBRARIES} eigensolver ${LEBEDEV_DATA_LIBRARIES})
     endif()
 endforeach()
