[cmake] update spe10 model1 data url

--- a/dune/gdt/test/CMakeLists.txt
+++ b/dune/gdt/test/CMakeLists.txt
@@ -37,7 +37,7 @@ if (NOT ${SPE10MODEL1DATA} STREQUAL "SPE10MODEL1DATA-NOTFOUND")
   endif(NOT EXISTS ${SPE10MODEL1DATA_TARGET_FILENAME})
 else(NOT ${SPE10MODEL1DATA} STREQUAL "SPE10MODEL1DATA-NOTFOUND")
         message(STATUS "Downloading Spe10 model1 data file:" ${SPE10MODEL1DATA})
-  execute_process(COMMAND wget -nc http://wwwmath.uni-muenster.de/num/ohlberger/research/software/perm_case1.zip
+  execute_process(COMMAND wget -nc https://www.uni-muenster.de/AMM/mirror/spe10/model1/perm_case1.zip
                   WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
   execute_process(COMMAND unzip -o perm_case1.zip WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
   set (SPE10MODEL1DATA_TARGET_FILENAME "${CMAKE_CURRENT_BINARY_DIR}/perm_case1.dat")
