--- a/dune/gdt/CMakeLists.txt
+++ b/dune/gdt/CMakeLists.txt
@@ -12,7 +12,7 @@
 if(dune-pybindxi_FOUND)
   set(pybindxi_modules)
   # some top-level modules
-  foreach(_target assembler discretefunction projections spaces)
+  foreach(_target assembler discretefunction projections prolongations spaces)
     dune_pybindxi_add_module(__${_target} EXCLUDE_FROM_ALL ${_target}.bindings.cc)
     list(APPEND pybindxi_modules __${_target})
   endforeach()
