[cmake] add dune treatment for python subdir package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,5 +74,8 @@ add_definitions("-DENABLE_HEADERCHECK=1")
 add_format(${CMAKE_CURRENT_SOURCE_DIR})
 add_tidy(${CMAKE_CURRENT_SOURCE_DIR})
 
+# currently only used for dependency tracking
+dune_install_python_package(PATH python)
+
 # finalize the dune project, e.g., generate config.h etc.
 finalize_dune_project(GENERATE_CONFIG_H_CMAKE)
