[bindings] adjust for cg spaces removal

--- a/dune/gdt/CMakeLists.txt
+++ b/dune/gdt/CMakeLists.txt
@@ -95,8 +95,8 @@ if(dune-pybindxi_FOUND)
   target_link_libraries(__functionals_elliptic_ipdg __functionals_elliptic_ipdg_helper)
   list(APPEND pybindxi_modules __functionals_elliptic_ipdg)
   dune_pybindxi_add_helper_lib(__functionals_l2_helper EXCLUDE_FROM_ALL
-                               functionals/l2.bindings/alu_fem_istl.cc
-                               functionals/l2.bindings/yasp_fem_istl.cc)
+          functionals/l2.bindings/alu_gdt_istl.cc
+                               functionals/l2.bindings/yasp_gdt_istl.cc)
   dune_pybindxi_add_module(__functionals_l2 EXCLUDE_FROM_ALL functionals/l2.bindings.cc)
   target_link_libraries(__functionals_l2 __functionals_l2_helper)
   list(APPEND pybindxi_modules __functionals_l2)
