--- a/dune/gdt/CMakeLists.txt
+++ b/dune/gdt/CMakeLists.txt
@@ -11,18 +11,18 @@
 
 if(DUNE_XT_WITH_PYTHON_BINDINGS)
   set(dunegdt_sources
-      assembler/system.lib/fem_alu_2d_simplex_conforming.cc
-      assembler/system.lib/fem_yasp_1d_equidistant_offset.cc
-      assembler/system.lib/fem_yasp_2d_equidistant_offset.cc
-      assembler/system.lib/fem_yasp_3d_equidistant_offset.cc
-      spaces/cg.lib/fem_alu_2d_simplex_conforming.cc
-      spaces/cg.lib/fem_yasp_1d_equidistant_offset.cc
-      spaces/cg.lib/fem_yasp_2d_equidistant_offset.cc
-      spaces/cg.lib/fem_yasp_3d_equidistant_offset.cc
-      spaces/dg.lib/fem_alu_2d_simplex_conforming.cc
-      spaces/dg.lib/fem_yasp_1d_equidistant_offset.cc
-      spaces/dg.lib/fem_yasp_2d_equidistant_offset.cc
-      spaces/dg.lib/fem_yasp_3d_equidistant_offset.cc)
+      assembler/system.lib/alu_2d_simplex_conforming.cc
+      assembler/system.lib/yasp_1d_equidistant_offset.cc
+      assembler/system.lib/yasp_2d_equidistant_offset.cc
+      assembler/system.lib/yasp_3d_equidistant_offset.cc
+      spaces/cg.lib/alu_2d_simplex_conforming.cc
+      spaces/cg.lib/yasp_1d_equidistant_offset.cc
+      spaces/cg.lib/yasp_2d_equidistant_offset.cc
+      spaces/cg.lib/yasp_3d_equidistant_offset.cc
+      spaces/dg.lib/alu_2d_simplex_conforming.cc
+      spaces/dg.lib/yasp_1d_equidistant_offset.cc
+      spaces/dg.lib/yasp_2d_equidistant_offset.cc
+      spaces/dg.lib/yasp_3d_equidistant_offset.cc)
   dune_library_add_sources(dunegdt SOURCES ${dunegdt_sources})
 endif()
 
@@ -34,10 +34,8 @@ if(dune-pybindxi_FOUND)
     list(APPEND pybindxi_modules __${_target})
   endforeach()
   dune_pybindxi_add_helper_lib(__assembler_helper EXCLUDE_FROM_ALL
-                               assembler/system.bindings/alu_fem.cc
-                               assembler/system.bindings/alu_gdt.cc
-                               assembler/system.bindings/yasp_fem.cc
-                               assembler/system.bindings/yasp_gdt.cc)
+                               assembler/system.bindings/alu.cc
+                               assembler/system.bindings/yasp.cc)
   target_link_libraries(__assembler __assembler_helper)
   dune_pybindxi_add_module(__spaces_block EXCLUDE_FROM_ALL playground/spaces/block.bindings.cc)
   list(APPEND pybindxi_modules __spaces_block)
@@ -51,14 +49,14 @@ if(dune-pybindxi_FOUND)
   # the operators
   # * elliptic
   dune_pybindxi_add_helper_lib(__operators_elliptic_helper EXCLUDE_FROM_ALL
-                               operators/elliptic.bindings/fem_istl.cc)
+                               operators/elliptic.bindings/istl.cc)
   dune_pybindxi_add_module(__operators_elliptic EXCLUDE_FROM_ALL operators/elliptic.bindings.cc)
   target_link_libraries(__operators_elliptic __operators_elliptic_helper)
   list(APPEND pybindxi_modules __operators_elliptic)
   # * elliptic-ipdg
   dune_pybindxi_add_helper_lib(__operators_elliptic_ipdg_helper EXCLUDE_FROM_ALL
-                               operators/elliptic-ipdg.bindings/alu_fem_istl.cc
-                               operators/elliptic-ipdg.bindings/yasp_fem_istl.cc)
+                               operators/elliptic-ipdg.bindings/alu_istl.cc
+                               operators/elliptic-ipdg.bindings/yasp_istl.cc)
   dune_pybindxi_add_module(__operators_elliptic_ipdg EXCLUDE_FROM_ALL operators/elliptic-ipdg.bindings.cc)
   target_link_libraries(__operators_elliptic_ipdg __operators_elliptic_ipdg_helper)
   list(APPEND pybindxi_modules __operators_elliptic_ipdg)
@@ -85,14 +83,14 @@ if(dune-pybindxi_FOUND)
   dune_pybindxi_add_module(__operators_RS2017 EXCLUDE_FROM_ALL playground/operators/RS2017.bindings.cc)
   list(APPEND pybindxi_modules __operators_RS2017)
   dune_pybindxi_add_helper_lib(__functionals_elliptic_ipdg_helper EXCLUDE_FROM_ALL
-                               functionals/elliptic-ipdg.bindings/alu_fem_istl.cc
-                               functionals/elliptic-ipdg.bindings/yasp_fem_istl.cc)
+                               functionals/elliptic-ipdg.bindings/alu_istl.cc
+                               functionals/elliptic-ipdg.bindings/yasp_istl.cc)
   dune_pybindxi_add_module(__functionals_elliptic_ipdg EXCLUDE_FROM_ALL functionals/elliptic-ipdg.bindings.cc)
   target_link_libraries(__functionals_elliptic_ipdg __functionals_elliptic_ipdg_helper)
   list(APPEND pybindxi_modules __functionals_elliptic_ipdg)
   dune_pybindxi_add_helper_lib(__functionals_l2_helper EXCLUDE_FROM_ALL
-          functionals/l2.bindings/alu_gdt_istl.cc
-                               functionals/l2.bindings/yasp_gdt_istl.cc)
+                               functionals/l2.bindings/alu_istl.cc
+                               functionals/l2.bindings/yasp_istl.cc)
   dune_pybindxi_add_module(__functionals_l2 EXCLUDE_FROM_ALL functionals/l2.bindings.cc)
   target_link_libraries(__functionals_l2 __functionals_l2_helper)
   list(APPEND pybindxi_modules __functionals_l2)
