--- a/examples/parallel_discretizations/block_swipdg.ini
+++ b/examples/parallel_discretizations/block_swipdg.ini
@@ -36,7 +36,7 @@ overlap = 1
 calc_error = 1
 visualize = 1
 intersection_vis = 0
-# with fem:    0: ER2007, 1: ESV2007, 2: both
+# 0: ER2007, 1: ESV2007, 2: both
 problem = 1
 block = 1
 ipdg = 1
