[cmake/py] relocate all bindings related code
into the /python subdir

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,22 +61,20 @@ add_subdirectory(dune)
 add_subdirectory(cmake/modules)
 add_subdirectory(examples EXCLUDE_FROM_ALL)
 
+include(DuneXTInstallPythonPackage)
+# this symlinks all files in python/ to the binary dir and install into the virtualenv from there
+# thereby making the compiled extensions directly usable from the venv
+dune_xt_install_python_package(PATH python)
+include_dependent_binary_python_dirs()
+# do not change order here
 if(dune-pybindxi_FOUND)
-  foreach(_file
-          dune/__init__.py
-          dune/gdt/__init__.py
-         )
-  execute_process(COMMAND ln -s ${CMAKE_CURRENT_SOURCE_DIR}/python/${_file} ${CMAKE_CURRENT_BINARY_DIR}/${_file})
-  endforeach()
+  add_subdirectory(python)
 endif()
 
 # enable headercheck
 add_definitions("-DENABLE_HEADERCHECK=1")
 add_format(${CMAKE_CURRENT_SOURCE_DIR})
 add_tidy(${CMAKE_CURRENT_SOURCE_DIR})
-
-# currently only used for dependency tracking
-dune_install_python_package(PATH python)
 
 # finalize the dune project, e.g., generate config.h etc.
 finalize_dune_project(GENERATE_CONFIG_H_CMAKE)
