--- a/dune/gdt/CMakeLists.txt
+++ b/dune/gdt/CMakeLists.txt
@@ -14,11 +14,7 @@ if(DUNE_XT_WITH_PYTHON_BINDINGS)
       assembler/system.lib/alu_2d_simplex_conforming.cc
       assembler/system.lib/yasp_1d_equidistant_offset.cc
       assembler/system.lib/yasp_2d_equidistant_offset.cc
-      assembler/system.lib/yasp_3d_equidistant_offset.cc
-      spaces/dg.lib/alu_2d_simplex_conforming.cc
-      spaces/dg.lib/yasp_1d_equidistant_offset.cc
-      spaces/dg.lib/yasp_2d_equidistant_offset.cc
-      spaces/dg.lib/yasp_3d_equidistant_offset.cc)
+      assembler/system.lib/yasp_3d_equidistant_offset.cc)
   dune_library_add_sources(dunegdt SOURCES ${dunegdt_sources})
 endif()
 
