[bindings|usercode] add first draft

--- a/dune/gdt/CMakeLists.txt
+++ b/dune/gdt/CMakeLists.txt
@@ -10,7 +10,7 @@
 if(dune-pybindxi_FOUND)
   set(pybindxi_modules)
   # some top-level modules
-  foreach(_target assembler discretefunction projections prolongations spaces)
+  foreach(_target assembler discretefunction projections prolongations spaces usercode)
     dune_pybindxi_add_module(__${_target} ${_target}.bindings.cc)
     list(APPEND pybindxi_modules __${_target})
   endforeach()
