--- a/dune/gdt/test/CMakeLists.txt
+++ b/dune/gdt/test/CMakeLists.txt
@@ -65,6 +65,6 @@ foreach(test_target ${dxt_test_binaries})
 	    target_link_libraries(${test_target} ${LPSolve_LIBRARIES} ${Qhull_LIBRARIES} ${LAPACKE_LIBRARIES} ${MATEXP_LIBRARIES} ${LEBEDEVDATA_LIBRARIES} expectations_hyperbolic_fv_discretizations_yaspgrid)
     endif()
     if(${test_target} MATCHES entropytest)
-	    target_link_libraries(${test_target} ${LPSolve_LIBRARIES} ${Qhull_LIBRARIES} ${LAPACKE_LIBRARIES} ${MATEXP_LIBRARIES} ${LEBEDEVDATA_LIBRARIES})
+	    target_link_libraries(${test_target} ${LPSolve_LIBRARIES} ${Qhull_LIBRARIES} ${LAPACKE_LIBRARIES} ${MATEXP_LIBRARIES} ${FEKETE_LIBRARIES} ${LEBEDEVDATA_LIBRARIES})
     endif()
 endforeach()
