--- a/dune/gdt/test/hyperbolic/CMakeLists.txt
+++ b/dune/gdt/test/hyperbolic/CMakeLists.txt
@@ -22,5 +22,4 @@ dune_add_library(expectations_hyperbolic_fv_discretizations_yaspgrid
                  eocexpectations-fv-transport-1dyaspgrid.cxx
                  eocexpectations-fv-transport-2dyaspgrid.cxx
                  eocexpectations-fv-shallowwater-1dyaspgrid.cxx
-                 eocexpectations-fv-shocktube-1dyaspgrid.cxx
-)
+                 eocexpectations-fv-shocktube-1dyaspgrid.cxx)
