apply cmake-format

--- a/dune/gdt/test/hyperbolic/CMakeLists.txt
+++ b/dune/gdt/test/hyperbolic/CMakeLists.txt
@@ -1,3 +1,4 @@
+# ~~~
 # This file is part of the dune-gdt project:
 #   https://github.com/dune-community/dune-gdt
 # Copyright 2010-2018 dune-gdt developers and contributors. All rights reserved.
@@ -8,6 +9,7 @@
 #   Felix Schindler (2016 - 2017)
 #   Rene Milk       (2016, 2018)
 #   Tobias Leibner  (2016 - 2017)
+# ~~~
 
 # expectation targets
 dune_add_library(expectations_hyperbolic_fv_discretizations_yaspgrid
@@ -20,5 +22,4 @@ dune_add_library(expectations_hyperbolic_fv_discretizations_yaspgrid
                  eocexpectations-fv-transport-1dyaspgrid.cxx
                  eocexpectations-fv-transport-2dyaspgrid.cxx
                  eocexpectations-fv-shallowwater-1dyaspgrid.cxx
-                 eocexpectations-fv-shocktube-1dyaspgrid.cxx
-)
+                 eocexpectations-fv-shocktube-1dyaspgrid.cxx)
